[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/UI/main_menu_background_placeholder.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/CharSelectionScreenButtons.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/button_notPressed.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/button_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Gobold.tres" type="DynamicFont" id=5]
[ext_resource path="res://scripts/CharacterSelection.gd" type="Script" id=6]

[node name="CharacterSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="background" type="TextureRect" parent="."]
self_modulate = Color( 0.286275, 0.286275, 0.286275, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -958.413
margin_top = -540.0
margin_right = 961.587
margin_bottom = 540.0
texture = ExtResource( 1 )

[node name="Buttons" type="Container" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ButtonBack" type="TextureButton" parent="Buttons"]
editor/display_folded = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -100.0
margin_right = 450.0
margin_bottom = -50.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="Buttons/ButtonBack"]
margin_right = 400.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
text = "Back"
align = 1
valign = 1
uppercase = true

[node name="ButtonPlay" type="TextureButton" parent="Buttons"]
editor/display_folded = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -450.0
margin_top = -100.0
margin_right = -50.0
margin_bottom = -50.0
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="Buttons/ButtonPlay"]
margin_right = 400.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
text = "Play"
align = 1
valign = 1
uppercase = true

[node name="ButtonCreate" type="TextureButton" parent="Buttons"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 50.0
margin_right = 200.0
margin_bottom = 100.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="Buttons/ButtonCreate"]
margin_right = 400.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
text = "Create"
align = 1
valign = 1
uppercase = true

[node name="marginContainer" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -67.0
margin_top = -24.0

[node name="LabelVersion" type="Label" parent="marginContainer"]
margin_top = 5.0
margin_right = 67.0
margin_bottom = 19.0
grow_horizontal = 0
text = "v 0_0_0"
align = 1
valign = 1

[node name="ListBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 140.0
margin_right = -50.0
margin_bottom = -150.0
color = Color( 0, 0, 0, 0.572549 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 140.0
margin_right = -50.0
margin_bottom = -150.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 924.0
margin_bottom = 310.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 150
script = ExtResource( 6 )

[node name="span" type="Container" parent="ScrollContainer/VBoxContainer"]
margin_right = 924.0

[connection signal="pressed" from="Buttons/ButtonBack" to="Buttons" method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="Buttons/ButtonPlay" to="Buttons" method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="Buttons/ButtonCreate" to="Buttons" method="_on_ButtonCreate_pressed"]
